--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,6 @@
 url=jdbc:postgresql://localhost:15432/loc_stock_trace
 user=admin
 password=pwd12345!
+
+# ?????CSV????
+trading_item_file=./_doc/db/data/data_j.csv
