jar形式でビルドと実行ができるようにbuild.gradle.ktsを設定

--- a/application.properties
+++ b/application.properties
@@ -3,5 +3,9 @@ url=jdbc:postgresql://localhost:15432/loc_stock_trace
 user=admin
 password=pwd12345!
 
-# ?????CSV????
-trading_item_file=./_doc/db/data/data_j.csv
+# ?????CSV
+trading_item_file=./_infra/db/data/data_j.csv
+
+# ?????????
+#   ?????
+concurrency=3
