スレッドを分けて株価情報を収集した結果を配列に保持したが、クリアできていなかったため、データが重複していた。初期化するように変更。

--- a/_infra/docker/docker-compose.yaml
+++ b/_infra/docker/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: pwd12345!
-      POSTGRES_DB: loc_stock_trace
+      POSTGRES_DB: loc_stocktrace
       TZ: "Asia/Tokyo"
     ports:
       - "15432:5432"
