--- a/application.properties
+++ b/application.properties
@@ -1,11 +1,11 @@
 # Database
-url=jdbc:postgresql://localhost:15432/loc_stock_trace
+url=jdbc:postgresql://localhost:15432/loc_stocktrace
 user=admin
 password=pwd12345!
 
-# ?????CSV
+# \u682A\u4FA1\u9298\u67C4CSV\u30D5\u30A1\u30A4\u30EB
 trading_item_file=./_infra/db/data/data_j.csv
 
-# ?????????
-#   ?????
+# \u30AF\u30ED\u30FC\u30EA\u30F3\u30B0\u8A2D\u5B9A
+#   \u540C\u6642\u5B9F\u884C\u30D7\u30ED\u30BB\u30B9\u6570
 concurrency=3
