--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -7,3 +7,9 @@ appender.console.layout.pattern = %p | %d{yyyy-MM-dd HH:mm:ss,SSS} %m%n
 
 rootLogger.level = debug
 rootLogger.appenderRef.stdout.ref = LogToConsole
+
+#appender.file.type = File
+#appender.file.name = FILE
+#appender.file.fileName = stockTrace.log
+#appender.file.layout.type = PatternLayout
+#appender.file.layout.pattern = %d %-5p %c [%t] %m%n
