--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,15 +1,47 @@
-status = error
 
+
+#
+#rootLogger.level = debug
+#rootLogger.appenderRef.stdout.ref = LogToConsole
+
+# status: log4j2\u306E\u8D77\u52D5\u6642\u306E\u30ED\u30B0\u30EC\u30D9\u30EB\u3000debug\u306B\u8A2D\u5B9A\u3059\u308B\u3068log4j\u306E\u8D77\u52D5\u6642\u306E\u30ED\u30B0\u304C\u51FA\u529B\u3055\u308C\u308B
+status = warn
+
+# === \u30B3\u30F3\u30BD\u30FC\u30EB\u30ED\u30B0\u8A2D\u5B9A ===
 appender.console.type = Console
-appender.console.name = LogToConsole
+appender.console.name = logToConsole
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %p | %d{yyyy-MM-dd HH:mm:ss,SSS} %m%n
 
-rootLogger.level = debug
-rootLogger.appenderRef.stdout.ref = LogToConsole
+# === \u30D5\u30A1\u30A4\u30EB\u30ED\u30B0\u8A2D\u5B9A ===
+# Log files location
+property.basePath = ./logs
 
-#appender.file.type = File
-#appender.file.name = FILE
-#appender.file.fileName = stockTrace.log
-#appender.file.layout.type = PatternLayout
-#appender.file.layout.pattern = %d %-5p %c [%t] %m%n
+# RollingFileAppender name, pattern, path and rollover policy
+appender.rolling.type = RollingFile
+appender.rolling.name = fileLogger
+appender.rolling.fileName= ${basePath}/stockTrace.log
+appender.rolling.filePattern= ${basePath}/stockTrace_%d{yyyyMMdd}.log.gz
+appender.rolling.layout.type = PatternLayout
+appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %level [%t] [%l] - %msg%n
+appender.rolling.policies.type = Policies
+
+# RollingFileAppender rotation policy
+appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
+appender.rolling.policies.size.size = 10MB
+appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
+appender.rolling.policies.time.interval = 10
+appender.rolling.policies.time.modulate = true
+appender.rolling.strategy.type = DefaultRolloverStrategy
+appender.rolling.strategy.delete.type = Delete
+appender.rolling.strategy.delete.basePath = ${basePath}
+appender.rolling.strategy.delete.maxDepth = 10
+appender.rolling.strategy.delete.ifLastModified.type = IfLastModified
+
+# Delete all files older than 30 days
+appender.rolling.strategy.delete.ifLastModified.age = 30d
+
+# \u30ED\u30B0\u51FA\u529B\u8A2D\u5B9A
+rootLogger.level = debug
+rootLogger.appenderRef.rolling.ref = fileLogger
+rootLogger.appenderRef.con.ref = logToConsole
