--- a/infra/docker/docker-compose.yaml
+++ b/infra/docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   stock_trace_db :
-    image: postgres:14K
+    image: postgres:14
     container_name: stock_trace_db
     restart: always
     environment:
