--- a/web/src/assets/package.json
+++ b/web/src/assets/package.json
@@ -17,6 +17,7 @@
     "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
+    "vue": "^3.2.41",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
