--- a/web/fastapi/src/assets/package.json
+++ b/web/fastapi/src/assets/package.json
@@ -21,6 +21,8 @@
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "vue": "^3.2.41",
+    "vue-loader": "^17.2.2",
+    "vue-template-compiler": "^2.7.14",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
